fix spacing and update README

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ i {
 	max-width: 100%;
 	min-height: 15em;
 	height: 20em;
-	margin: 0.5em 1em;
+	margin: 0.5em 1.5em;
 	display: flex;
 	align-items: center;
 	overflow-x: scroll;
